# wrs

./: Cargo.toml
src/: camera.rs  font_shader.wgsl  main.rs  shader.wgsl
src/font/: mod.rs  renderer.rs
src/quad/: mod.rs  quad_shader.wgsl  renderer.rs
